@@ -3,6 +3,16 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+[error] java.lang.ArrayIndexOutOfBoundsException: 2757:-18
+[error] 	at org.gjt.sp.jedit.Buffer.remove(Unknown Source)
+[error] 	at org.gjt.sp.jedit.textarea.Selection$Rect.setText(Unknown Source)
+[error] 	at org.gjt.sp.jedit.textarea.JEditTextArea.setSelectedText(Unknown Source)
+[error] 	at org.gjt.sp.jedit.Registers.paste(Unknown Source)
+[error] 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+[error] 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:39)
+[error] 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:25)
+[error] 	at java.lang.reflect.Method.invoke(Method.java:324)
+
 - finish regexp syntax rules -- SPAN::END substitution
 - why is binding F2 to 'build last target' broken?
 - narrow to one line: select all: blows up
